// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/VersionManagement/List render filter item 1`] = `
<body>
  <div>
    <div
      class="actiontech-page-header-namespace css-1xspr0w"
    >
      <div
        class="title"
      >
        版本管理
      </div>
      <div
        class="extra"
      >
        <a
          href="/sqle/project/700300/version-management/create"
        >
          <button
            class="ant-btn ant-btn-primary basic-button-wrapper css-1vnelmv"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                color="currentColor"
                fill="none"
                height="10"
                viewBox="0 0 10 10"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m5.02.5-.012 9M.5 5h9"
                  stroke="currentColor"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
            <span>
              添加版本
            </span>
          </button>
        </a>
      </div>
    </div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center full-width-element flex-space-between actiontech-table-toolbar-namespace css-a7k93w"
          style="flex-wrap: wrap; margin-bottom: -8px;"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px; padding-bottom: 8px;"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 12px;"
              >
                <span
                  class="ant-input-affix-wrapper basic-input-wrapper actiontech-table-search-input-namespace css-1f6svkh ant-input-affix-wrapper-sm"
                >
                  <input
                    class="ant-input ant-input-sm"
                    id="actiontech-table-search-input"
                    placeholder="输入关键字搜索"
                    type="text"
                    value=""
                  />
                  <span
                    class="ant-input-suffix"
                  >
                    <span
                      class="ant-input-clear-icon ant-input-clear-icon-hidden ant-input-clear-icon-has-suffix"
                      role="button"
                      tabindex="-1"
                    >
                      <svg
                        fill="currentColor"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                        />
                      </svg>
                    </span>
                    <svg
                      class="custom-icon custom-icon-search"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m10.518 9.693 2.499 2.498-.826.825-2.498-2.498a5.252 5.252 0 0 1-8.527-4.101 5.25 5.25 0 0 1 5.25-5.25 5.252 5.252 0 0 1 4.102 8.526m-1.17-.433a4.082 4.082 0 0 0-2.931-6.927 4.08 4.08 0 0 0-4.084 4.084 4.082 4.082 0 0 0 6.927 2.93z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm actiontech-filter-button-namespace basic-button-wrapper css-1vnelmv"
                  style="padding: 0px 6px 0px 10px;"
                  type="button"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center css-1nt49ug"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 2px;"
                    >
                      收起筛选
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <svg
                        color="currentColor"
                        fill="none"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 7.219-3.3 3.3-.942-.943L8 5.333l4.243 4.243-.943.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-space-item"
            style="padding-bottom: 8px;"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-1vnelmv"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      class="custom-icon custom-icon-refresh"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center actiontech-table-filter-container-namespace full-width-element css-tvjydu"
      style="flex-wrap: wrap; margin-bottom: -12px;"
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px; padding-bottom: 12px;"
      >
        <div
          class="css-1y8q0oh"
        >
          <div
            class="ant-picker ant-picker-range ant-picker-small basic-range-picker-wrapper custom-picker-prefix css-1o244th"
            style="min-width: 320px;"
          >
            <div
              class="ant-picker-input ant-picker-input-active"
            >
              <input
                autocomplete="off"
                placeholder="开始时间"
                readonly=""
                size="12"
                value=""
              />
            </div>
            <div
              class="ant-picker-range-separator"
            >
              <svg
                fill="currentColor"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                />
              </svg>
            </div>
            <div
              class="ant-picker-input"
            >
              <input
                autocomplete="off"
                placeholder="结束时间"
                readonly=""
                size="12"
                value=""
              />
            </div>
            <div
              class="ant-picker-active-bar"
              style="left: 0px; width: 0px; position: absolute;"
            />
            <span
              class="ant-picker-suffix"
            >
              <span
                class="custom-range-picker-filter-label"
              >
                创建时间
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="padding-bottom: 12px;"
      >
        <div
          class="css-1y8q0oh"
        >
          <div
            class="ant-picker ant-picker-range ant-picker-small basic-range-picker-wrapper custom-picker-prefix css-1o244th"
            style="min-width: 320px;"
          >
            <div
              class="ant-picker-input ant-picker-input-active"
            >
              <input
                autocomplete="off"
                placeholder="开始时间"
                readonly=""
                size="12"
                value=""
              />
            </div>
            <div
              class="ant-picker-range-separator"
            >
              <svg
                fill="currentColor"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                />
              </svg>
            </div>
            <div
              class="ant-picker-input"
            >
              <input
                autocomplete="off"
                placeholder="结束时间"
                readonly=""
                size="12"
                value=""
              />
            </div>
            <div
              class="ant-picker-active-bar"
              style="left: 0px; width: 0px; position: absolute;"
            />
            <span
              class="ant-picker-suffix"
            >
              <span
                class="custom-range-picker-filter-label"
              >
                锁定时间
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
    >
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-has-fix-right"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
              >
                <table
                  style="table-layout: auto;"
                >
                  <colgroup>
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col
                      style="width: 246px;"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell ellipsis-column-width"
                        scope="col"
                      >
                        版本名称
                      </th>
                      <th
                        class="ant-table-cell ellipsis-column-width"
                        scope="col"
                      >
                        版本说明
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        版本状态
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        创建时间
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        锁定时间
                      </th>
                      <th
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        scope="col"
                        style="position: sticky; right: 0px;"
                      >
                        操作
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="50"
                    >
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <a
                          href="/sqle/project/700300/version-management/detail/50"
                        >
                          tentacle
                        </a>
                      </td>
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <div
                          aria-label="now unzip supposing awful solicit enroll mobilize kookily junior dilate hence ferociously smart unless lest alienated modulo onto monster roasted interesting below miscalculate at department bump except dividend skeleton casement precedent soliloquy bind amid overconfidently because unnecessarily aboard however tragic toothbrush regarding vast quicker shyly expostulate uh-huh lumpy with please dish hateful unruly radiant hole weekly yum blah geez modulo gymnast even ick livid sleepily ha inasmuch lest ravioli unfortunately procurement intelligent onto between husband object instead hm tepid quirkily offset starboard luck besides minus linear executor meadow colour under austere shush far innocently gallivant illiterate waist nearly fisherman quaver whoa telescope kindly kowtow now really what limply contradict nab customise lazy times ocelot spellcheck subtract political cumbersome loftily apropos demonstrate busily before selfishly aw amidst busily instead vice intrepid yak scenario where linseed uselessly slowly intently which but ew incidentally of pace lyre reconstitute like so round advocate minus the proper doorpost busily between achieve irk gifted precious yum eke until suddenly fidget pfft even slump out fooey um amused furiously anti yuppify to since"
                          class="ant-typography ant-typography-ellipsis ant-typography-single-line basic-typography-ellipsis css-wgj5gs"
                        >
                          now unzip supposing awful solicit enroll mobilize kookily junior dilate hence ferociously smart unless lest alienated modulo onto monster roasted interesting below miscalculate at department bump except dividend skeleton casement precedent soliloquy bind amid overconfidently because unnecessarily aboard however tragic toothbrush regarding vast quicker shyly expostulate uh-huh lumpy with please dish hateful unruly radiant hole weekly yum blah geez modulo gymnast even ick livid sleepily ha inasmuch lest ravioli unfortunately procurement intelligent onto between husband object instead hm tepid quirkily offset starboard luck besides minus linear executor meadow colour under austere shush far innocently gallivant illiterate waist nearly fisherman quaver whoa telescope kindly kowtow now really what limply contradict nab customise lazy times ocelot spellcheck subtract political cumbersome loftily apropos demonstrate busily before selfishly aw amidst busily instead vice intrepid yak scenario where linseed uselessly slowly intently which but ew incidentally of pace lyre reconstitute like so round advocate minus the proper doorpost busily between achieve irk gifted precious yum eke until suddenly fidget pfft even slump out fooey um amused furiously anti yuppify to since
                          <div
                            aria-label="复制"
                            class="ant-typography-copy"
                            role="button"
                            style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                            tabindex="0"
                          >
                            <span
                              aria-label="copy"
                              class="anticon anticon-copy"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="copy"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                          >
                            lg
                          </span>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                          >
                            <span
                              aria-hidden="true"
                            >
                              ...
                            </span>
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        发布中
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2025-03-05 10:01:23
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-12-06 23:24:32
                      </td>
                      <td
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        style="position: sticky; right: 0px;"
                      >
                        <div
                          class="css-new95e"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                                type="button"
                              >
                                <span>
                                  编 辑
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                                type="button"
                              >
                                <span>
                                  锁 定
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                                type="button"
                              >
                                <span>
                                  删 除
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="86"
                    >
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <a
                          href="/sqle/project/700300/version-management/detail/86"
                        >
                          membership
                        </a>
                      </td>
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <div
                          aria-label="wordy dally chilly outlying next restaurant toward scuffle for or minor safely yuck gee numb fabricate hence psst that er agitated only reluctantly the beneath atop sometimes scram loudly disposer whoa apparatus oh stoop versus ferociously ew owlishly failing obvious drat interestingly elver even inhibit squeaky fun mmm miscalculate mortally ambitious supposing fill huzzah how instance ah upwardly overvalue failing"
                          class="ant-typography ant-typography-ellipsis ant-typography-single-line basic-typography-ellipsis css-wgj5gs"
                        >
                          wordy dally chilly outlying next restaurant toward scuffle for or minor safely yuck gee numb fabricate hence psst that er agitated only reluctantly the beneath atop sometimes scram loudly disposer whoa apparatus oh stoop versus ferociously ew owlishly failing obvious drat interestingly elver even inhibit squeaky fun mmm miscalculate mortally ambitious supposing fill huzzah how instance ah upwardly overvalue failing
                          <div
                            aria-label="复制"
                            class="ant-typography-copy"
                            role="button"
                            style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                            tabindex="0"
                          >
                            <span
                              aria-label="copy"
                              class="anticon anticon-copy"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="copy"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                          >
                            lg
                          </span>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                          >
                            <span
                              aria-hidden="true"
                            >
                              ...
                            </span>
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        已锁定
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2025-08-31 11:34:05
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-05-15 08:36:15
                      </td>
                      <td
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        style="position: sticky; right: 0px;"
                      >
                        <div
                          class="css-new95e"
                        >
                          <button
                            class="ant-btn ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                            type="button"
                          >
                            <span>
                              删 除
                            </span>
                          </button>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="31"
                    >
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <a
                          href="/sqle/project/700300/version-management/detail/31"
                        >
                          attraction
                        </a>
                      </td>
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <div
                          aria-label="er haul without thigh think edible zebra on rotating too fairly hmph lest except woot rare coaxingly chap adjudge gerbil in lively home justly elevation pigpen optimistic super commonly mmm outside even democratize psst politely ah decision lest contractor yawningly construe nimble towards collectivization dial boo desk supposing huzzah afore indeed tensely without broken an vet manage um on accidentally"
                          class="ant-typography ant-typography-ellipsis ant-typography-single-line basic-typography-ellipsis css-wgj5gs"
                        >
                          er haul without thigh think edible zebra on rotating too fairly hmph lest except woot rare coaxingly chap adjudge gerbil in lively home justly elevation pigpen optimistic super commonly mmm outside even democratize psst politely ah decision lest contractor yawningly construe nimble towards collectivization dial boo desk supposing huzzah afore indeed tensely without broken an vet manage um on accidentally
                          <div
                            aria-label="复制"
                            class="ant-typography-copy"
                            role="button"
                            style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                            tabindex="0"
                          >
                            <span
                              aria-label="copy"
                              class="anticon anticon-copy"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="copy"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                          >
                            lg
                          </span>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                          >
                            <span
                              aria-hidden="true"
                            >
                              ...
                            </span>
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        已锁定
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-01-19 15:52:42
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2025-04-12 04:52:10
                      </td>
                      <td
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        style="position: sticky; right: 0px;"
                      >
                        <div
                          class="css-new95e"
                        />
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="33"
                    >
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <a
                          href="/sqle/project/700300/version-management/detail/33"
                        >
                          institute
                        </a>
                      </td>
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <div
                          aria-label="gah ha aside ambitious er preregister even mosh midst hypothesize correctly meanwhile on interviewer times far um penalise horde phooey underachieve unnaturally ha in psst even along sadly whimsical which that although colorfully drat wolf merit gift extroverted squeaky provided essence yippee ring yum drat yieldingly furthermore warmhearted hastily greedily flimsy institute esteemed an notwithstanding than caring aware though plagiarise geez dearly blah and synthesise usefully seal pave into underachieve sans father immediate provided quickly loosely yum calmly hmph where whoever exterior whoever pleased burdensome huddle swear excitable uselessly zowie fooey lotion candid multicolored traditionalism ugly till entwine chubby mmm aside slink inexperienced because indeed kaleidoscopic greatly meanwhile forgery chairperson frank rosin wordy gah limply noteworthy below yeast relative yum a whether leading vibraphone pro across disapprove yum once mmm amid perfectly however light fooey adviser considering optimistic interestingly pertain in vice swathe indeed questioningly fake record finally boohoo hm since comb acidly transparency providence helpfully precious opposite if whose once how instead impassioned whoever inventory round when victoriously brr throughout if geez sternly provided inferior birdcage dispose"
                          class="ant-typography ant-typography-ellipsis ant-typography-single-line basic-typography-ellipsis css-wgj5gs"
                        >
                          gah ha aside ambitious er preregister even mosh midst hypothesize correctly meanwhile on interviewer times far um penalise horde phooey underachieve unnaturally ha in psst even along sadly whimsical which that although colorfully drat wolf merit gift extroverted squeaky provided essence yippee ring yum drat yieldingly furthermore warmhearted hastily greedily flimsy institute esteemed an notwithstanding than caring aware though plagiarise geez dearly blah and synthesise usefully seal pave into underachieve sans father immediate provided quickly loosely yum calmly hmph where whoever exterior whoever pleased burdensome huddle swear excitable uselessly zowie fooey lotion candid multicolored traditionalism ugly till entwine chubby mmm aside slink inexperienced because indeed kaleidoscopic greatly meanwhile forgery chairperson frank rosin wordy gah limply noteworthy below yeast relative yum a whether leading vibraphone pro across disapprove yum once mmm amid perfectly however light fooey adviser considering optimistic interestingly pertain in vice swathe indeed questioningly fake record finally boohoo hm since comb acidly transparency providence helpfully precious opposite if whose once how instead impassioned whoever inventory round when victoriously brr throughout if geez sternly provided inferior birdcage dispose
                          <div
                            aria-label="复制"
                            class="ant-typography-copy"
                            role="button"
                            style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                            tabindex="0"
                          >
                            <span
                              aria-label="copy"
                              class="anticon anticon-copy"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="copy"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                          >
                            lg
                          </span>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                          >
                            <span
                              aria-hidden="true"
                            >
                              ...
                            </span>
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        已锁定
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-05-26 19:46:05
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-12-03 15:13:41
                      </td>
                      <td
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        style="position: sticky; right: 0px;"
                      >
                        <div
                          class="css-new95e"
                        />
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed"
          >
            <li
              class="ant-pagination-total-text"
            >
              <span>
                共 4 条数据
              </span>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="上一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-next ant-pagination-disabled"
              title="下一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="页码"
                class="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow ant-select-show-search"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="页码"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="20 条/页"
                  >
                    20 条/页
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/VersionManagement/List render init snap 1`] = `
<body>
  <div>
    <div
      class="actiontech-page-header-namespace css-1xspr0w"
    >
      <div
        class="title"
      >
        版本管理
      </div>
      <div
        class="extra"
      >
        <a
          href="/sqle/project/700300/version-management/create"
        >
          <button
            class="ant-btn ant-btn-primary basic-button-wrapper css-1vnelmv"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                color="currentColor"
                fill="none"
                height="10"
                viewBox="0 0 10 10"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m5.02.5-.012 9M.5 5h9"
                  stroke="currentColor"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
            <span>
              添加版本
            </span>
          </button>
        </a>
      </div>
    </div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center full-width-element flex-space-between actiontech-table-toolbar-namespace css-a7k93w"
          style="flex-wrap: wrap; margin-bottom: -8px;"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px; padding-bottom: 8px;"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 12px;"
              >
                <span
                  class="ant-input-affix-wrapper basic-input-wrapper actiontech-table-search-input-namespace css-1f6svkh ant-input-affix-wrapper-sm"
                >
                  <input
                    class="ant-input ant-input-sm"
                    id="actiontech-table-search-input"
                    placeholder="输入关键字搜索"
                    type="text"
                    value=""
                  />
                  <span
                    class="ant-input-suffix"
                  >
                    <span
                      class="ant-input-clear-icon ant-input-clear-icon-hidden ant-input-clear-icon-has-suffix"
                      role="button"
                      tabindex="-1"
                    >
                      <svg
                        fill="currentColor"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                        />
                      </svg>
                    </span>
                    <svg
                      class="custom-icon custom-icon-search"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m10.518 9.693 2.499 2.498-.826.825-2.498-2.498a5.252 5.252 0 0 1-8.527-4.101 5.25 5.25 0 0 1 5.25-5.25 5.252 5.252 0 0 1 4.102 8.526m-1.17-.433a4.082 4.082 0 0 0-2.931-6.927 4.08 4.08 0 0 0-4.084 4.084 4.082 4.082 0 0 0 6.927 2.93z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm ant-btn-two-chinese-chars actiontech-filter-button-namespace basic-button-wrapper css-1vnelmv"
                  style="padding: 0px 6px 0px 10px;"
                  type="button"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center css-1nt49ug"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 2px;"
                    >
                      筛选
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <svg
                        color="currentColor"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-space-item"
            style="padding-bottom: 8px;"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-1vnelmv"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      class="custom-icon custom-icon-refresh"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
    >
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-has-fix-right"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
              >
                <table
                  style="table-layout: auto;"
                >
                  <colgroup>
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col
                      style="width: 246px;"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell ellipsis-column-width"
                        scope="col"
                      >
                        版本名称
                      </th>
                      <th
                        class="ant-table-cell ellipsis-column-width"
                        scope="col"
                      >
                        版本说明
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        版本状态
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        创建时间
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        锁定时间
                      </th>
                      <th
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        scope="col"
                        style="position: sticky; right: 0px;"
                      >
                        操作
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="50"
                    >
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <a
                          href="/sqle/project/700300/version-management/detail/50"
                        >
                          tentacle
                        </a>
                      </td>
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <div
                          aria-label="now unzip supposing awful solicit enroll mobilize kookily junior dilate hence ferociously smart unless lest alienated modulo onto monster roasted interesting below miscalculate at department bump except dividend skeleton casement precedent soliloquy bind amid overconfidently because unnecessarily aboard however tragic toothbrush regarding vast quicker shyly expostulate uh-huh lumpy with please dish hateful unruly radiant hole weekly yum blah geez modulo gymnast even ick livid sleepily ha inasmuch lest ravioli unfortunately procurement intelligent onto between husband object instead hm tepid quirkily offset starboard luck besides minus linear executor meadow colour under austere shush far innocently gallivant illiterate waist nearly fisherman quaver whoa telescope kindly kowtow now really what limply contradict nab customise lazy times ocelot spellcheck subtract political cumbersome loftily apropos demonstrate busily before selfishly aw amidst busily instead vice intrepid yak scenario where linseed uselessly slowly intently which but ew incidentally of pace lyre reconstitute like so round advocate minus the proper doorpost busily between achieve irk gifted precious yum eke until suddenly fidget pfft even slump out fooey um amused furiously anti yuppify to since"
                          class="ant-typography ant-typography-ellipsis ant-typography-single-line basic-typography-ellipsis css-wgj5gs"
                        >
                          now unzip supposing awful solicit enroll mobilize kookily junior dilate hence ferociously smart unless lest alienated modulo onto monster roasted interesting below miscalculate at department bump except dividend skeleton casement precedent soliloquy bind amid overconfidently because unnecessarily aboard however tragic toothbrush regarding vast quicker shyly expostulate uh-huh lumpy with please dish hateful unruly radiant hole weekly yum blah geez modulo gymnast even ick livid sleepily ha inasmuch lest ravioli unfortunately procurement intelligent onto between husband object instead hm tepid quirkily offset starboard luck besides minus linear executor meadow colour under austere shush far innocently gallivant illiterate waist nearly fisherman quaver whoa telescope kindly kowtow now really what limply contradict nab customise lazy times ocelot spellcheck subtract political cumbersome loftily apropos demonstrate busily before selfishly aw amidst busily instead vice intrepid yak scenario where linseed uselessly slowly intently which but ew incidentally of pace lyre reconstitute like so round advocate minus the proper doorpost busily between achieve irk gifted precious yum eke until suddenly fidget pfft even slump out fooey um amused furiously anti yuppify to since
                          <div
                            aria-label="复制"
                            class="ant-typography-copy"
                            role="button"
                            style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                            tabindex="0"
                          >
                            <span
                              aria-label="copy"
                              class="anticon anticon-copy"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="copy"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                          >
                            lg
                          </span>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                          >
                            <span
                              aria-hidden="true"
                            >
                              ...
                            </span>
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        发布中
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2025-03-05 10:01:23
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-12-06 23:24:32
                      </td>
                      <td
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        style="position: sticky; right: 0px;"
                      >
                        <div
                          class="css-new95e"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                                type="button"
                              >
                                <span>
                                  编 辑
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                                type="button"
                              >
                                <span>
                                  锁 定
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                                type="button"
                              >
                                <span>
                                  删 除
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="86"
                    >
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <a
                          href="/sqle/project/700300/version-management/detail/86"
                        >
                          membership
                        </a>
                      </td>
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <div
                          aria-label="wordy dally chilly outlying next restaurant toward scuffle for or minor safely yuck gee numb fabricate hence psst that er agitated only reluctantly the beneath atop sometimes scram loudly disposer whoa apparatus oh stoop versus ferociously ew owlishly failing obvious drat interestingly elver even inhibit squeaky fun mmm miscalculate mortally ambitious supposing fill huzzah how instance ah upwardly overvalue failing"
                          class="ant-typography ant-typography-ellipsis ant-typography-single-line basic-typography-ellipsis css-wgj5gs"
                        >
                          wordy dally chilly outlying next restaurant toward scuffle for or minor safely yuck gee numb fabricate hence psst that er agitated only reluctantly the beneath atop sometimes scram loudly disposer whoa apparatus oh stoop versus ferociously ew owlishly failing obvious drat interestingly elver even inhibit squeaky fun mmm miscalculate mortally ambitious supposing fill huzzah how instance ah upwardly overvalue failing
                          <div
                            aria-label="复制"
                            class="ant-typography-copy"
                            role="button"
                            style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                            tabindex="0"
                          >
                            <span
                              aria-label="copy"
                              class="anticon anticon-copy"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="copy"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                          >
                            lg
                          </span>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                          >
                            <span
                              aria-hidden="true"
                            >
                              ...
                            </span>
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        已锁定
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2025-08-31 11:34:05
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-05-15 08:36:15
                      </td>
                      <td
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        style="position: sticky; right: 0px;"
                      >
                        <div
                          class="css-new95e"
                        >
                          <button
                            class="ant-btn ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-1vnelmv"
                            type="button"
                          >
                            <span>
                              删 除
                            </span>
                          </button>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="31"
                    >
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <a
                          href="/sqle/project/700300/version-management/detail/31"
                        >
                          attraction
                        </a>
                      </td>
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <div
                          aria-label="er haul without thigh think edible zebra on rotating too fairly hmph lest except woot rare coaxingly chap adjudge gerbil in lively home justly elevation pigpen optimistic super commonly mmm outside even democratize psst politely ah decision lest contractor yawningly construe nimble towards collectivization dial boo desk supposing huzzah afore indeed tensely without broken an vet manage um on accidentally"
                          class="ant-typography ant-typography-ellipsis ant-typography-single-line basic-typography-ellipsis css-wgj5gs"
                        >
                          er haul without thigh think edible zebra on rotating too fairly hmph lest except woot rare coaxingly chap adjudge gerbil in lively home justly elevation pigpen optimistic super commonly mmm outside even democratize psst politely ah decision lest contractor yawningly construe nimble towards collectivization dial boo desk supposing huzzah afore indeed tensely without broken an vet manage um on accidentally
                          <div
                            aria-label="复制"
                            class="ant-typography-copy"
                            role="button"
                            style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                            tabindex="0"
                          >
                            <span
                              aria-label="copy"
                              class="anticon anticon-copy"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="copy"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                          >
                            lg
                          </span>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                          >
                            <span
                              aria-hidden="true"
                            >
                              ...
                            </span>
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        已锁定
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-01-19 15:52:42
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2025-04-12 04:52:10
                      </td>
                      <td
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        style="position: sticky; right: 0px;"
                      >
                        <div
                          class="css-new95e"
                        />
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="33"
                    >
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <a
                          href="/sqle/project/700300/version-management/detail/33"
                        >
                          institute
                        </a>
                      </td>
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <div
                          aria-label="gah ha aside ambitious er preregister even mosh midst hypothesize correctly meanwhile on interviewer times far um penalise horde phooey underachieve unnaturally ha in psst even along sadly whimsical which that although colorfully drat wolf merit gift extroverted squeaky provided essence yippee ring yum drat yieldingly furthermore warmhearted hastily greedily flimsy institute esteemed an notwithstanding than caring aware though plagiarise geez dearly blah and synthesise usefully seal pave into underachieve sans father immediate provided quickly loosely yum calmly hmph where whoever exterior whoever pleased burdensome huddle swear excitable uselessly zowie fooey lotion candid multicolored traditionalism ugly till entwine chubby mmm aside slink inexperienced because indeed kaleidoscopic greatly meanwhile forgery chairperson frank rosin wordy gah limply noteworthy below yeast relative yum a whether leading vibraphone pro across disapprove yum once mmm amid perfectly however light fooey adviser considering optimistic interestingly pertain in vice swathe indeed questioningly fake record finally boohoo hm since comb acidly transparency providence helpfully precious opposite if whose once how instead impassioned whoever inventory round when victoriously brr throughout if geez sternly provided inferior birdcage dispose"
                          class="ant-typography ant-typography-ellipsis ant-typography-single-line basic-typography-ellipsis css-wgj5gs"
                        >
                          gah ha aside ambitious er preregister even mosh midst hypothesize correctly meanwhile on interviewer times far um penalise horde phooey underachieve unnaturally ha in psst even along sadly whimsical which that although colorfully drat wolf merit gift extroverted squeaky provided essence yippee ring yum drat yieldingly furthermore warmhearted hastily greedily flimsy institute esteemed an notwithstanding than caring aware though plagiarise geez dearly blah and synthesise usefully seal pave into underachieve sans father immediate provided quickly loosely yum calmly hmph where whoever exterior whoever pleased burdensome huddle swear excitable uselessly zowie fooey lotion candid multicolored traditionalism ugly till entwine chubby mmm aside slink inexperienced because indeed kaleidoscopic greatly meanwhile forgery chairperson frank rosin wordy gah limply noteworthy below yeast relative yum a whether leading vibraphone pro across disapprove yum once mmm amid perfectly however light fooey adviser considering optimistic interestingly pertain in vice swathe indeed questioningly fake record finally boohoo hm since comb acidly transparency providence helpfully precious opposite if whose once how instead impassioned whoever inventory round when victoriously brr throughout if geez sternly provided inferior birdcage dispose
                          <div
                            aria-label="复制"
                            class="ant-typography-copy"
                            role="button"
                            style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                            tabindex="0"
                          >
                            <span
                              aria-label="copy"
                              class="anticon anticon-copy"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="copy"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                          >
                            lg
                          </span>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                          >
                            <span
                              aria-hidden="true"
                            >
                              ...
                            </span>
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        已锁定
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-05-26 19:46:05
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-12-03 15:13:41
                      </td>
                      <td
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        style="position: sticky; right: 0px;"
                      >
                        <div
                          class="css-new95e"
                        />
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed"
          >
            <li
              class="ant-pagination-total-text"
            >
              <span>
                共 4 条数据
              </span>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="上一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-next ant-pagination-disabled"
              title="下一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="页码"
                class="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow ant-select-show-search"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="页码"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="20 条/页"
                  >
                    20 条/页
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;
